--- a/index.html
+++ b/index.html
@@ -4,44 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rai Oliveira | Portfolio</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <section>
-        <nav id="navbar">
-            <ul>
-                <li><a href="#about">About</a></li>
-                <li><a href="#projects">Projects</a></li>
-                <li><a href="#contact">Contact</a></li>
-            </ul>
-        </nav>
-        <div id="content">
-            <div id="text-link">
-                <h1>I'm Rai Oliveira,<br>a Front-end Developer</h1>
-                <p>An IT professional looking<br> for an internship</p><br><hr><br>
-                <a href="https://github.com/OliveiraRai" target="_blank"><ion-icon name="logo-github"></ion-icon></a>
-                <a href="https://www.linkedin.com/in/rai-oliveira-3a247625a/" target="_blank"><ion-icon name="logo-linkedin"></ion-icon></a>
-                <a href="https://www.instagram.com/oliveira.s.rai/" target="_blank"><ion-icon name="logo-instagram"></ion-icon></a>
-            </div>
-            <div>
-                <div id="photo"></div>
-            </div>
-        </div>
-    </section>
-    <section id="about">
-        <br><div class="aboutText">
-            <br><h2>About me</h2><br>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed soluta animi voluptates pariatur. Doloremque sapiente nemo fuga officiis ut illum architecto asperiores cum excepturi sequi quibusdam quod earum, modi eveniet.</p>
-        </div>
-    </section>
-    <section id="projects">
-
-    </section>
-    <section id="contact">
-
-    </section>
-
-    <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
-    <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
+    
 </body>
 </html>
