--- a/index.html
+++ b/index.html
@@ -7,6 +7,57 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    
+    <section id="homePage">
+        <nav id="navbar">
+            <div id="navbarLogo">
+                <h4>R.O</h4>
+            </div>
+            <div id="navbarLinks">
+                <ul>
+                    <a href="#aboutSection"><li>ABOUT</li></a>
+                    <a href="#"><li>PROJECTS</li></a>
+                    <a href="#" id="contactMe"><li>CONTACT ME</li></a>
+                </ul>
+            </div>
+        </nav>
+        <div id="infoContainer">
+            <div>
+                
+            </div>
+            <div id="containerTXT">
+                <p class="textHI">Hi, my name is</p>
+                <h1>RAI OLIVEIRA.</h1>
+                <h2>FRONT END DEVELOPER AND UX/UI DESIGNER</h2>
+                <p class="txtParagraph">I am a software engineer specializing in building (and occasionally<br>designing) exceptional digital experiences. </p>
+            </div>
+            <div id="SMlinks">
+                <a href="https://github.com/OliveiraRai" target="_blank"><ion-icon name="logo-github"></ion-icon></a>
+                <a href="https://www.linkedin.com/in/rai-oliveira-3a247625a/" target="_blank"><ion-icon name="logo-linkedin"></ion-icon></a>
+            </div>
+        </div>
+    </section>
+    <section id="aboutSection">
+        <div id="aboutContainer">
+            <div id="imgContainer">
+                <div id="profileIMG">
+
+                </div>
+            </div>
+            <div id="contentContainer">
+                <div class="ABtxt">
+                    <h1>ABOUT</h1>
+                </div>
+                <div class="ABparagraph">
+                    <p>I am a Systems Analysis and Development student, with a passionate focus on  Front-End programming and UX/UI Design. With hands-on experience in HTML5,  CSS3, JavaScript, C, Python, and MySQL, I am constantly striving to improve my  skills and contribute creative solutions. I aim to build a solid career, gain recognition  as a senior developer, and eventually join a renowned company like Microsoft.</p>
+                </div>
+                <div class="ABicon">
+                    <ion-icon name="information-circle-outline"></ion-icon>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 </body>
 </html>
