--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <div id="navbarLinks">
                 <ul>
                     <a href="#aboutSection"><li>ABOUT</li></a>
-                    <a href="#"><li>PROJECTS</li></a>
+                    <a href="#projectsSection"><li>PROJECTS</li></a>
                     <a href="#" id="contactMe"><li>CONTACT ME</li></a>
                 </ul>
             </div>
@@ -53,6 +53,51 @@
                 <div class="ABicon">
                     <ion-icon name="information-circle-outline"></ion-icon>
                 </div>
+            </div>
+        </div>
+    </section>
+    <section id="projectsSection">
+        <div id="txtContainer">
+            <h1>Here is some of my projects...</h1>
+        </div>
+        <div id="projectsContainer">
+            <div id="project1">
+                <div id="pj1Img">
+
+                </div>
+                <div id="pj1text">
+                    <div class="pj1title">
+                        <a href="https://oliveirarai.github.io/projetoDevLinks/" target="_blank"><h3>Business Card</h3></a>
+                    </div>
+                    <div class="pj1content">
+                        <p>A business card with features. It  helps people get to know me and  my skills.</p>
+                    </div>
+                    <div id="technologies">
+                        <img src="./img/html-5.png" alt="html">
+                        <img src="./img/css-3.png" alt="css">
+                        <img src="./img/js.png" alt="js">
+                    </div>
+                </div>
+            </div>
+            <div id="project2">
+                <div id="pj2Img">
+
+                </div>
+                <div id="pj2text">
+                    <div class="pj2title">
+                        <a href="#"><h3>Login Page</h3></a>
+                    </div>
+                    <div class="pj2content">
+                        <p>A Login page with no functionality,  but it will still have it.</p>
+                    </div>
+                    <div id="technologies">
+                        <img src="./img/html-5.png" alt="html">
+                        <img src="./img/css-3.png" alt="css">
+                    </div>
+                </div>
+            </div>
+            <div id="project3">
+                <p>More will enter here later</p>
             </div>
         </div>
     </section>
