--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                 </div>
                 <div id="pj2text">
                     <div class="pj2title">
-                        <a href="#"><h3>Login Page</h3></a>
+                        <a href="https://limochat.vercel.app/" target="_blank"><h3>Login Page</h3></a>
                     </div>
                     <div class="pj2content">
                         <p>A Login page with no functionality,  but it will still have it.</p>
