added contact me section

--- a/index.html
+++ b/index.html
@@ -101,6 +101,19 @@
             </div>
         </div>
     </section>
+    <section id="contactMeSection">
+        <div id="CTtxt">
+            <h1>Contact Me</h1>
+        </div>
+        <div id="CTmainContainer">
+            <form action="">
+                <input type="text" placeholder="Full name">
+                <input type="email" placeholder="E-mail">
+                <textarea name="" id="CTmessage" placeholder="Message"></textarea>
+                <input type="submit" value="Send" id="submitBTN">
+            </form>
+        </div>
+    </section>
 
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
