--- a/index.html
+++ b/index.html
@@ -117,10 +117,10 @@
         </div>
         <div id="CTmainContainer">
             <form action="">
-                <input type="text" placeholder="Full name">
-                <input type="email" placeholder="E-mail">
-                <textarea name="" id="CTmessage" placeholder="Message"></textarea>
-                <input type="submit" value="Send" id="submitBTN">
+                <input type="text" id="CTname" placeholder="Full name" required>
+                <input type="email" id="CTemail" placeholder="E-mail" required>
+                <textarea id="CTmessage" placeholder="Message" required></textarea>
+                <button>Send</button>
             </form>
         </div>
     </section>
