--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rai Oliveira | Portfolio</title>
     <link rel="stylesheet" href="./style.css">
+    <script src="script.js" type="text/javascript"></script>
     <script type="text/javascript"
         src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js">
     </script>
     <script type="text/javascript">
     (function(){
       emailjs.init({
-        publicKey: "WsVfufvtmdCJNwLQo",
+        publicKey: "1LI8dT-aIdGbkLJN4",
       });
     })();
     </script>
@@ -120,7 +121,7 @@
                 <input type="text" id="CTname" placeholder="Full name" required>
                 <input type="email" id="CTemail" placeholder="E-mail" required>
                 <textarea id="CTmessage" placeholder="Message" required></textarea>
-                <button>Send</button>
+                <button onclick="sendEmail()">Send</button>
             </form>
         </div>
     </section>
