debug button on navbar

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <ul>
                     <a href="#aboutSection"><li>ABOUT</li></a>
                     <a href="#projectsSection"><li>PROJECTS</li></a>
-                    <a href="contactMeSection" id="contactMe"><li>CONTACT ME</li></a>
+                    <a href="#contactMeSection" id="contactMe"><li>CONTACT ME</li></a>
                 </ul>
             </div>
         </nav>
