--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rai Oliveira | Portfolio</title>
+    <link rel="icon" href="data:,">
     <link rel="stylesheet" href="./style.css">
     <script src="script.js" type="text/javascript"></script>
     <script type="text/javascript"
